# search-intent

./: .gitignore  README.md  config.ini  main.py  pyproject.toml  requirements.txt  wbs.md
data/: labelled_data_dev.csv  unlabelled_test_set_dev.txt
data/arrow_cache_dev/test/: cache-506674674f818d9c.arrow  cache-90cc3c50f3fb0331.arrow  cache-a7088e1677d97725.arrow  cache-d8ae0bfafaacc99a.arrow  cache-f7fc1c1cf4d8a8a1.arrow  data-00000-of-00001.arrow  dataset_info.json  state.json
data/arrow_cache_dev/train/: state.json
data/arrow_cache_dev/validation/: cache-ad0777c2fc7c216f.arrow  data-00000-of-00001.arrow  dataset_info.json  state.json
docs/: model_distilbert_optimisation_1_1.ipynb  model_distilbert_optimisation_1_2.ipynb  train_distilbert_ad_queries_2_augmented_shuffled_wo_test_fraction.ipynb
src/: classification_pipeline.py
src/app_controllers/: data_handler.py  inferer.py  predictor.py  scorer.py  trainer.py
src/classifiers/: classification_pipeline.py  query_classification_dto.py  symbolic_classifier.py  transformer_classifier.py
src/data_handlers/: arrow_dataset_converter.py  dataset_augmenter.py  dataset_splitter.py  labelled_data_reader.py  unlabelled_data_reader.py
src/indexers/: full_text_indexer.py  labelled_data_set.py
src/loggers/: log_utils.py
src/matchers/: raw_string_matcher.py
src/trainers/: hyperparameter_optimizator.py  transformer_trainer.py
tests/: conftest.py  test_classification_pipeline.py
