[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-intent"
version = "0.1.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
markers = [
    "focus: marks tests for individual debugging (deselect with '-m \"not focus\"')",
    "serial",
]
